--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -5,11 +5,14 @@
 }
 
 body {
-  background-color: black;
+  background-image: url(../images/wp2757874-wallpaper-gif.gif);
+  background-size: cover;
+  background-attachment: fixed;
   color: blanchedalmond;
   font-family: sans-serif;
 }
 
+/* navbar styling */
 .navbar {
   border-bottom: 1px solid white;
   display: flex;
@@ -24,6 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   border-right: 1px solid white;
+  font-size: 30px;
 }
 
 .icons {
@@ -34,7 +38,9 @@ body {
 }
 
 .icon {
+  color: aliceblue;
   padding-left: 5%;
+  font-size: 30px;
 }
 
 .link-tel {
@@ -49,7 +55,9 @@ body {
 }
 
 .link {
-  padding-left: 2%;
+  padding-left: 5%;
+  text-decoration: none;
+  color: aliceblue;
 }
 
 .tel {
@@ -57,13 +65,16 @@ body {
   align-items: center;
   white-space: nowrap;
   padding-left: 2%;
+  text-decoration: none;
+  color: aliceblue;
 }
 
 /* homepage */
 
 .homePage {
   display: flex;
-  height: 90vh;
+  height: 91vh;
+  border-bottom: 1px solid white;
 }
 
 .page-title {
@@ -75,6 +86,7 @@ body {
   padding-top: 10vh;
   padding-bottom: 10vh;
   writing-mode: vertical-rl;
+  font-size: x-large;
 }
 
 .content-right {
@@ -98,7 +110,12 @@ body {
 
 h1 {
   padding: 2%;
+  padding-top: 10%;
   font-size: 60px;
+}
+
+.stndout {
+  color: #f24236;
 }
 
 .description {
@@ -107,6 +124,10 @@ h1 {
 
 .descr-btn {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 3%;
+  gap: 10px;
 }
 
 .btn-contain {
@@ -115,4 +136,37 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
+}
+
+.button {
+  color: white;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  text-decoration-line: none;
+  font-size: x-large;
+  background-color: #b66449;
+  width: 8vw;
+  white-space: nowrap;
+}
+
+.counters {
+  display: flex;
+  justify-content: space-around;
+}
+
+.counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.counter-num {
+  font-size: 100px;
+}
+
+.counter-name {
+  font-size: x-large;
 }
