--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,7 @@
 .about {
-  display: flex;
-  height: 102vh;
+  display: grid;
+  grid-template-columns: 4.5% 35% auto;
+  min-height: 102vh;
   border-bottom: 1px solid white;
 }
 
@@ -13,7 +14,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 4.5vw;
   padding-top: 20vh;
   padding-bottom: 10vh;
   writing-mode: vertical-rl;
