--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,23 +1,24 @@
 #contact-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding-top: 20vh;
+  justify-content: space-around;
+  align-self: flex-end;
   height: 60%;
-  width: 30%;
-  padding-left: 2%;
-  padding-right: 2%;
-  margin-left: 10%;
+  width: 50%;
+  padding-right: 5%;
+  padding-bottom: 5%;
 }
 
 .contact-input {
+  background: transparent;
   height: 10%;
   border: none;
   outline: none;
-  border-bottom: 1px solid ##f24236;
+  border-bottom: 1px solid #f24236;
 }
 
 .contact-input-msg {
+  background: transparent;
   margin-top: 1.5%;
   height: 30%;
   border: none;
@@ -29,14 +30,14 @@
 ::placeholder {
   font-family: sans-serif;
   font-size: 17px;
-  color: black;
+  color: white;
 }
 
 .contact-input-msg,
 ::placeholder {
   font-family: sans-serif;
   font-size: 17px;
-  color: black;
+  color: white;
 }
 
 .btn {
@@ -49,6 +50,7 @@
   font-size: x-large;
   background-color: #f24236;
   border: none;
+  width: 8vw;
 }
 
 .btn:hover {
@@ -56,4 +58,54 @@
   background-color: white;
   color: #f24236;
   transition: 0.6s;
+}
+
+.form-container {
+  grid-column: 3 / 4;
+  display: flex;
+  flex-direction: column;
+}
+
+.cnt-form-head {
+  height: 40%;
+  display: flex;
+  align-items: center;
+  padding-left: 5%;
+  font-size: xx-large;
+}
+
+.cnt-me {
+  display: flex;
+  flex-direction: column;
+}
+
+.cnt-me-link {
+  cursor: pointer;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding-left: 2%;
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.cnt-box {
+  border-bottom: 1px solid white;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  white-space: nowrap;
+}
+
+.mailer {
+  border-top: 1px solid white;
+}
+
+.fa-external-link-alt {
+  padding-left: 1vw;
+}
+
+.fst-icon {
+  padding-right: 1vw;
+  color: #f24236;
 }
