--- a/styles/skill.css
+++ b/styles/skill.css
@@ -1,4 +1,6 @@
 .skill-icons {
+  display: flex;
+  flex-direction: column;
   font-size: 150px;
 }
 
@@ -23,5 +25,48 @@
 
 .fa-js-square:hover {
   color: #efd829;
+  transition: 0.3s;
+}
+
+.fa-users:hover {
+  color: aqua;
+  transition: 0.3s;
+}
+
+.icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 20%;
+}
+
+/* tooltip styling */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  font-size: 18px;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
   transition: 0.3s;
 }
