--- a/styles/about.css
+++ b/styles/about.css
@@ -19,3 +19,20 @@
   writing-mode: vertical-rl;
   font-size: x-large;
 }
+
+@media screen and (max-width: 800px) {
+  .about {
+    display: grid;
+    grid-template-rows: 1fr 1fr 4%;
+    min-height: 100vh;
+  }
+
+  .page-title2 {
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+    writing-mode: unset;
+    padding: 0;
+    border-top: 1px solid white;
+    justify-content: space-around;
+  }
+}
