--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -247,24 +247,30 @@ h1 {
 }
 
 @media screen and (max-width: 800px) {
+  .navbar {
+    height: 5%;
+  }
+
   .homePage {
     display: grid;
-    grid-template-rows: 4% 1fr 1fr;
+    grid-template-rows: 1fr 1fr 4%;
   }
 
   .page-title {
-    grid-row: 1 / 2;
+    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+    writing-mode: unset;
+    padding: 0;
+    border-top: 1px solid white;
   }
 
   .content-left {
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
   }
 
   .content-right {
-    grid-row: 3 / 4;
-  }
-
-  .page-title2 {
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
   }
 }
