--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -48,7 +48,7 @@ body {
 }
 
 .cornerP {
-  width: 4.5%;
+  width: 5.9vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,7 +60,6 @@ body {
   width: 35%;
   display: flex;
   align-items: center;
-  border-right: 1px solid white;
 }
 
 .icon {
@@ -295,7 +294,28 @@ h1 {
     justify-content: space-evenly;
   }
 
-  .link-tel {
-    width: unset;
+  .navbar {
+    display: unset;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr;
+  }
+
+  .icons {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    width: 100%;
+  }
+
+  .tel {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    display: flex;
+    justify-content: center;
+  }
+
+  .links {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    width: 100%;
   }
 }
