--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -294,7 +294,7 @@ h1 {
     height: 10%;
     display: unset;
     display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr;
+    grid-template: 1fr 1fr / 50% 50%;
   }
 
   .icons {
