--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -248,7 +248,7 @@ h1 {
 @media screen and (max-width: 800px) {
   .homePage {
     display: grid;
-    grid-template-rows: 1fr 1fr 4%;
+    grid-template-rows: auto auto 4%;
   }
 
   .page-title {
