--- a/styles/XP.css
+++ b/styles/XP.css
@@ -88,4 +88,11 @@
   .item {
     height: 200px;
   }
+
+  .xp-cv {
+    align-self: center;
+    justify-self: center;
+    align-items: center;
+    justify-content: center;
+  }
 }
