--- a/styles/projects.css
+++ b/styles/projects.css
@@ -78,3 +78,20 @@ img {
 .proj-icon {
   margin-left: 3%;
 }
+
+@media screen and (max-width: 800px) {
+  .proj-text {
+    display: none;
+  }
+
+  .slide {
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+  }
+
+  .proj-content1 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
+    flex-direction: column-reverse;
+  }
+}
