--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  background-color: #151623;
   background-image: url(../images/wp2757874-wallpaper-gif.gif);
   background-size: cover;
   background-attachment: fixed;
