--- a/styles/testimonials.css
+++ b/styles/testimonials.css
@@ -7,13 +7,6 @@
   grid-template-columns: 40% 60%;
   justify-content: center;
   align-items: center;
-
-  /* glassmorphism */
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border-radius: 10px;
 }
 
 .profile2 {
@@ -35,7 +28,7 @@ h1 {
 }
 
 .title {
-  color: navy;
+  color: #f24236;
   font-size: 28px;
 }
 
