--- a/styles/about.css
+++ b/styles/about.css
@@ -1,7 +1,7 @@
 .about {
   display: grid;
   grid-template-columns: 4.5% 35% auto;
-  min-height: 102vh;
+  height: 100%;
   border-bottom: 1px solid white;
 }
 
