--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,12 +1,21 @@
+
+.cnt-grid {
+  display: grid;
+  grid-template-columns: 4.5% 35% auto;
+  grid-template-rows: auto 50px;
+  height: 100%;
+  border-bottom: 1px solid white;
+}
+
 #contact-form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-self: flex-end;
+  align-self:center;
   height: 60%;
   width: 50%;
   padding-right: 5%;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
 }
 
 .contact-input {
@@ -60,8 +69,29 @@
   transition: 0.6s;
 }
 
+.cnt-title2 {
+  border-right: 1px solid white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20vh;
+  padding-bottom: 10vh;
+  writing-mode: vertical-rl;
+  font-size: x-large;
+}
+
+.cntct-left {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  border-right: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 .form-container {
   grid-column: 3 / 4;
+  grid-row: 1 / 2;
   display: flex;
   flex-direction: column;
 }
@@ -134,4 +164,14 @@
   .cnt-me-link {
     max-width: 40%;
   }
+}
+
+.footer{
+  background-color: #151623;
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid white;
 }
