--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -121,12 +121,14 @@ body {
 }
 
 /* homepage */
+section {
+  height: 100vh;
+}
 
 .homePage {
   display: grid;
   grid-template-columns: 4.5% 35% auto;
-  min-height: 90vh;
-  margin-top: 10vh;
+  height: 100%;
   border-bottom: 1px solid white;
 }
 
@@ -185,7 +187,7 @@ body {
 h1 {
   padding: 2%;
   padding-top: 10%;
-  font-size: 5vw;
+  font-size: 3em;
 }
 
 .stndout {
