--- a/styles/projects.css
+++ b/styles/projects.css
@@ -3,19 +3,132 @@
   height: 100%;
 }
 
+/* Slideshow container */
+.slideshow-container {
+  grid-column: 3 / 4;
+  width: 60%;
+  height: 65%;
+  position: absolute;
+  margin: auto;
+  display: flex;
+}
+
 /* projects slide */
 .mySlides {
   display: none;
-}
-img {
-  vertical-align: middle;
+  width: 100%;
 }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+.mySlides a {
+  visibility: hidden;
+  
+}
+
+.mySlides:hover a {
+  visibility: visible;
+}
+
+.slide1 {
+  background: url(../images/timeline.png);
+  background-size: cover;
+}
+
+.slide1:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.5),
+    rgba(55, 55, 55, 0.5)
+  ),
+  url(../images/timeline.png);
+  background-size: cover;
+}
+
+.slide2 {
+  background: url(../images/testimonial.png);
+  background-size: cover;
+}
+
+.slide2:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.5),
+    rgba(55, 55, 55, 0.5)
+  ),
+  url(../images/testimonial.png);
+  background-size: cover;
+}
+
+.slide3 {
+  background: url(../images/contact\ form.png);
+  background-size: cover;
+}
+
+.slide3:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.5),
+    rgba(55, 55, 55, 0.5)
+  ),
+  url(../images/contact\ form.png);
+  background-size: cover;
+}
+
+.slide4 {
+  background: url(../images/project-cards.png);
+  background-size: cover;
+}
+
+.slide4:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.5),
+    rgba(55, 55, 55, 0.5)
+  ),
+  url(../images/project-cards.png);
+  background-size: cover;
+}
+
+.slide5 {
+  background: url();
+  background-size: cover;
+}
+
+.slide5:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.5),
+    rgba(55, 55, 55, 0.5)
+  ),
+  url();
+  background-size: cover;
+}
+
+.slide6 {
+  background: url();
+  background-size: cover;
+}
+
+.slide6:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(55, 55, 55, 0.5),
+    rgba(55, 55, 55, 0.5)
+  ),
+  url();
+  background-size: cover;
+}
+
+a.btnlnk {
+  align-self: center;
+  margin-left: 43%;
+  background-color: #f24236;
+  color: white;
+  border-radius: 50px;
+  padding: 15px;
+  font-size: x-large;
+  white-space: nowrap;
+  text-decoration-line: none;
+
 }
 
 /* The dots/bullets/indicators */
