--- a/styles/about.css
+++ b/styles/about.css
@@ -20,23 +20,58 @@
   font-size: x-large;
 }
 
-/* icon styles */
-#skills {
-  height: 100vh;
+.info-cont {
+  width: 90%;
+  height: 35%;
+  display: flex;
 }
 
-.skilt {
-  height: 100%;
+.information {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.information div {
+  display: flex;
+  font-size: 1.5vw;
+  margin-top: 5%;
+}
+
+.info i {
+  font-size: 2.5vw;
+  margin-right: 5%;
+}
+
+/*skill icon styles */
+
+.head2 {
+  font-size: 5vw;
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .skill-icons {
   display: flex;
   flex-direction: column;
-  font-size: 150px;
+  font-size: 5vw;
 }
 
 .skill-icon {
-  padding: 5%;
+  margin-right: 5%;
+}
+
+.icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 20%;
 }
 
 .fa-html5:hover {
@@ -62,14 +97,6 @@
 .fa-users:hover {
   color: aqua;
   transition: 0.3s;
-}
-
-.icon-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 20%;
 }
 
 /* tooltip styling */
@@ -103,11 +130,13 @@
 }
 
 @media screen and (max-width: 800px) {
+  
   .about {
     display: grid;
     grid-template-rows: auto auto 4%;
-    min-height: 100vh;
   }
+
+  
 
   .page-title2 {
     grid-row: 3 / 4;
@@ -116,9 +145,19 @@
     padding: 0;
     border-top: 1px solid white;
     justify-content: space-around;
+    border-right: unset;
   }
 
-  .skill-icon {
-    font-size: 6rem;
+  .tooltiptext {
+    display: none;
+  }
+
+  .icon-box {
+    flex-wrap: wrap;
+  }
+  
+  .info-cont {
+    display: flex;
+    flex-direction: column;
   }
 }
