--- a/styles/contact.css
+++ b/styles/contact.css
@@ -128,6 +128,16 @@
   white-space: nowrap;
 }
 
+.footer{
+  background-color: #151623;
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid white;
+}
+
 .mailer {
   border-top: 1px solid white;
 }
@@ -147,8 +157,35 @@
 }
 
 @media screen and (max-width: 800px) {
+  .cnt-grid {
+    display: grid;
+    grid-template-rows: 1fr 1fr 4% 4%;
+  }
+
+  .cntct-left {
+    grid-row: 1/2;
+    grid-column: 1/4;
+    border-right: unset;
+  }
+  
   .form-container {
+    grid-row: 2/3;
     grid-column: 1 / 4;
+  }
+
+  .cnt-title2 {
+    grid-row: 3/4;
+    grid-column: 1/4;
+    writing-mode: unset;
+    justify-content: space-around;
+    padding: unset;
+    border-top: 1px solid white;
+    border-right: unset;
+  }
+
+  .footer {
+    grid-row: 4/5;
+    grid-column: 1/4;
   }
 
   #contact-form {
@@ -166,12 +203,3 @@
   }
 }
 
-.footer{
-  background-color: #151623;
-  grid-row: 2 / 3;
-  grid-column: 1 / 4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid white;
-}
