--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,6 +1,17 @@
 
-.proj{
-  height: 100%;
+.proj-content1 {
+  grid-column: 2 / 3;
+  border-right: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.content-right-proj {
+  grid-column: 3 / 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Slideshow container */
@@ -89,7 +100,7 @@
 }
 
 .slide5 {
-  background: url();
+  background: url(../images/Screenshot\ \(80\).png);
   background-size: cover;
 }
 
@@ -99,12 +110,12 @@
     rgba(55, 55, 55, 0.5),
     rgba(55, 55, 55, 0.5)
   ),
-  url();
+  url(../images/Screenshot\ \(80\).png);
   background-size: cover;
 }
 
 .slide6 {
-  background: url();
+  background: url(../images/currencycon.png);
   background-size: cover;
 }
 
@@ -114,7 +125,7 @@
     rgba(55, 55, 55, 0.5),
     rgba(55, 55, 55, 0.5)
   ),
-  url();
+  url(../images/currencycon.png);
   background-size: cover;
 }
 
@@ -160,6 +171,10 @@ a.btnlnk {
   background-color: #717171;
 }
 
+.proj-icon {
+  margin-left: 3%;
+}
+
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -187,31 +202,50 @@ a.btnlnk {
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev,
-  .next,
-  .text {
-    font-size: 11px;
-  }
-}
-
-.proj-icon {
-  margin-left: 3%;
-}
-
 @media screen and (max-width: 800px) {
-  .proj-text {
+  #prjects {
+    height: unset;
+  }
+
+    .proj-text {
     display: none;
   }
 
-  .slide {
-    grid-row: 1 / 2;
-    grid-column: 1 / 4;
+  .proj {
+    display: grid;
+    grid-template-rows: auto auto 4%;
+  }
+
+  .slideshow-container {
+    height: 30%;
+    width: 100%;
+  }
+
+  .mySlides {
+    height: 100%;
+    
+  }
+
+  .content-right-proj {
+    grid-row: 1/2;
+    grid-column: 1/4;
+    height: 40vh;
   }
 
   .proj-content1 {
     grid-row: 2 / 3;
     grid-column: 1 / 4;
     flex-direction: column-reverse;
+
+  }
+
+  .prev,
+  .next,
+  .text {
+    font-size: 11px;
+  }
+
+  #contact-form button {
+    width: 100%;
   }
 }
