--- a/styles/about.css
+++ b/styles/about.css
@@ -1,12 +1,12 @@
 .about {
   display: grid;
   grid-template-columns: 4.5% 35% auto;
-  height: 100%;
+  min-height: 100%;
   border-bottom: 1px solid white;
 }
 
 .text2 {
-  margin-top: 10vh;
+  width: 80%;
 }
 
 .page-title2 {
@@ -22,31 +22,66 @@
 
 .info-cont {
   width: 90%;
-  height: 35%;
+  height: 50%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .information {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .information div {
   display: flex;
-  font-size: 1.5vw;
   margin-top: 5%;
 }
 
+.info-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+}
+
+.info p {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+}
+
 .info i {
-  font-size: 2.5vw;
+  font-size: 2rem;
   margin-right: 5%;
+}
+
+.content-right3 {
+  grid-column: 3 / 4;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.content-left3 {
+  grid-column: 2 / 3;
+  border-right: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /*skill icon styles */
 
 .head2 {
-  font-size: 5vw;
+  font-size: 2.5rem;
 }
 
 .skills {
@@ -54,16 +89,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 10%;
+  width: 90%;
 }
 
 .skill-icons {
   display: flex;
   flex-direction: column;
-  font-size: 5vw;
 }
 
 .skill-icon {
   margin-right: 5%;
+  font-size: 2.5rem;
 }
 
 .icon-box {
@@ -130,19 +167,42 @@
 }
 
 @media screen and (max-width: 800px) {
-  
   .about {
     display: grid;
     grid-template-rows: auto auto 4%;
   }
 
-  .skill-icons {
-    height: 45vh;
+  .content-right3 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 4;
+  }
+
+  .content-left3 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+    border-right: unset;
+    align-items: center;
+  }
+
+  .skills {
+    width: 90%;
+    padding: unset;
+    padding-top: 5%;
+  }
+
+  .info-icon {
+    margin-right: 5%;
   }
 
   .info-cont {
-    align-items: center;
-    padding: unset;
+    display: flex;
+  }
+
+  .information {
+    display: flex;
+    flex-direction: unset;
+    flex-wrap: wrap;
+    gap: 2em;
   }
 
   .page-title2 {
@@ -161,10 +221,6 @@
 
   .icon-box {
     flex-wrap: wrap;
-  }
-  
-  .info-cont {
-    display: flex;
-    flex-direction: column;
+    height: unset;
   }
 }
