--- a/styles/navbar-homepage.css
+++ b/styles/navbar-homepage.css
@@ -187,7 +187,7 @@ section {
 h1 {
   padding: 2%;
   padding-top: 10%;
-  font-size: 3em;
+  font-size: 2.8em;
 }
 
 .stndout {
@@ -237,21 +237,24 @@ h1 {
 .counters {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .counter {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 5%;
+  width: 45%;
 }
 
 .counter-num {
-  font-size: 100px;
+  font-size: 3.5em;
 }
 
 .counter-name {
-  font-size: x-large;
+  font-size: 1em;
 }
 
 @media screen and (max-width: 800px) {
