--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,3 @@
-
 .proj-content1 {
   grid-column: 2 / 3;
   border-right: 1px solid white;
@@ -32,7 +31,6 @@
 
 .mySlides a {
   visibility: hidden;
-  
 }
 
 .mySlides:hover a {
@@ -40,17 +38,17 @@
 }
 
 .slide1 {
-  background: url(../images/timeline.png);
+  background: url(../images/sneaker-store.png);
   background-size: cover;
 }
 
 .slide1:hover {
   background: linear-gradient(
-    0deg,
-    rgba(55, 55, 55, 0.5),
-    rgba(55, 55, 55, 0.5)
-  ),
-  url(../images/timeline.png);
+      0deg,
+      rgba(55, 55, 55, 0.5),
+      rgba(55, 55, 55, 0.5)
+    ),
+    url(../images/sneaker-store.png);
   background-size: cover;
 }
 
@@ -61,11 +59,11 @@
 
 .slide2:hover {
   background: linear-gradient(
-    0deg,
-    rgba(55, 55, 55, 0.5),
-    rgba(55, 55, 55, 0.5)
-  ),
-  url(../images/testimonial.png);
+      0deg,
+      rgba(55, 55, 55, 0.5),
+      rgba(55, 55, 55, 0.5)
+    ),
+    url(../images/testimonial.png);
   background-size: cover;
 }
 
@@ -76,11 +74,11 @@
 
 .slide3:hover {
   background: linear-gradient(
-    0deg,
-    rgba(55, 55, 55, 0.5),
-    rgba(55, 55, 55, 0.5)
-  ),
-  url(../images/contact\ form.png);
+      0deg,
+      rgba(55, 55, 55, 0.5),
+      rgba(55, 55, 55, 0.5)
+    ),
+    url(../images/contact\ form.png);
   background-size: cover;
 }
 
@@ -91,26 +89,26 @@
 
 .slide4:hover {
   background: linear-gradient(
-    0deg,
-    rgba(55, 55, 55, 0.5),
-    rgba(55, 55, 55, 0.5)
-  ),
-  url(../images/project-cards.png);
+      0deg,
+      rgba(55, 55, 55, 0.5),
+      rgba(55, 55, 55, 0.5)
+    ),
+    url(../images/project-cards.png);
   background-size: cover;
 }
 
 .slide5 {
-  background: url(../images/Screenshot\ \(80\).png);
+  background: url(../images/BMICALC.png);
   background-size: cover;
 }
 
 .slide5:hover {
   background: linear-gradient(
-    0deg,
-    rgba(55, 55, 55, 0.5),
-    rgba(55, 55, 55, 0.5)
-  ),
-  url(../images/Screenshot\ \(80\).png);
+      0deg,
+      rgba(55, 55, 55, 0.5),
+      rgba(55, 55, 55, 0.5)
+    ),
+    url(../images/BMICALC.png);
   background-size: cover;
 }
 
@@ -121,11 +119,11 @@
 
 .slide6:hover {
   background: linear-gradient(
-    0deg,
-    rgba(55, 55, 55, 0.5),
-    rgba(55, 55, 55, 0.5)
-  ),
-  url(../images/currencycon.png);
+      0deg,
+      rgba(55, 55, 55, 0.5),
+      rgba(55, 55, 55, 0.5)
+    ),
+    url(../images/currencycon.png);
   background-size: cover;
 }
 
@@ -139,7 +137,6 @@ a.btnlnk {
   font-size: x-large;
   white-space: nowrap;
   text-decoration-line: none;
-
 }
 
 /* The dots/bullets/indicators */
@@ -207,7 +204,7 @@ a.btnlnk {
     height: unset;
   }
 
-    .proj-text {
+  .proj-text {
     display: none;
   }
 
@@ -223,7 +220,6 @@ a.btnlnk {
 
   .mySlides {
     height: 100%;
-    
   }
 
   .content-right-proj {
@@ -236,7 +232,6 @@ a.btnlnk {
     grid-row: 2 / 3;
     grid-column: 1 / 4;
     flex-direction: column-reverse;
-
   }
 
   .prev,
