--- a/styles/projects.css
+++ b/styles/projects.css
@@ -38,7 +38,7 @@
 }
 
 .slide1 {
-	background: url(../images/BMICALC.png);
+	background: url(../images/blogsite.png);
 	background-size: cover;
 }
 
@@ -48,7 +48,7 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/BMICALC.png);
+		url(../images/blogsite.png);
 	background-size: cover;
 }
 
@@ -68,7 +68,7 @@
 }
 
 .slide3 {
-	background: url(../images/currencycon.png);
+	background: url(../images/BMICALC.png);
 	background-size: cover;
 }
 
@@ -78,12 +78,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/currencycon.png);
+		url(../images/BMICALC.png);
 	background-size: cover;
 }
 
 .slide4 {
-	background: url(../images/animeshop.png);
+	background: url(../images/currencycon.png);
 	background-size: cover;
 }
 
@@ -93,12 +93,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/animeshop.png);
+		url(../images/currencycon.png);
 	background-size: cover;
 }
 
 .slide5 {
-	background: url(../images/sneaker-store.png);
+	background: url(../images/animeshop.png);
 	background-size: cover;
 }
 
@@ -108,12 +108,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/sneaker-store.png);
+		url(../images/animeshop.png);
 	background-size: cover;
 }
 
 .slide6 {
-	background: url(../images/tickets.png);
+	background: url(../images/sneaker-store.png);
 	background-size: cover;
 }
 
@@ -123,12 +123,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/tickets.png);
+		url(../images/sneaker-store.png);
 	background-size: cover;
 }
 
 .slide7 {
-	background: url(../images/calc.png);
+	background: url(../images/tickets.png);
 	background-size: cover;
 }
 
@@ -138,12 +138,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/calc.png);
+		url(../images/tickets.png);
 	background-size: cover;
 }
 
 .slide8 {
-	background: url(../images/pokedex.png);
+	background: url(../images/calc.png);
 	background-size: cover;
 }
 
@@ -153,12 +153,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/pokedex.png);
+		url(../images/calc.png);
 	background-size: cover;
 }
 
 .slide9 {
-	background: url(../images/sneaker-store.png);
+	background: url(../images/pokedex.png);
 	background-size: cover;
 }
 
@@ -168,12 +168,12 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/sneaker-store.png);
+		url(../images/pokedex.png);
 	background-size: cover;
 }
 
 .slide10 {
-	background: url(../images/contact\ form.png);
+	background: url(../images/sneaker-store.png);
 	background-size: cover;
 }
 
@@ -183,16 +183,31 @@
 			rgba(55, 55, 55, 0.5),
 			rgba(55, 55, 55, 0.5)
 		),
-		url(../images/contact\ form.png);
+		url(../images/sneaker-store.png);
 	background-size: cover;
 }
 
 .slide11 {
-	background: url(../images/project-cards.png);
+	background: url(../images/contact\ form.png);
 	background-size: cover;
 }
 
 .slide11:hover {
+	background: linear-gradient(
+			0deg,
+			rgba(55, 55, 55, 0.5),
+			rgba(55, 55, 55, 0.5)
+		),
+		url(../images/contact\ form.png);
+	background-size: cover;
+}
+
+.slide12 {
+	background: url(../images/project-cards.png);
+	background-size: cover;
+}
+
+.slide12:hover {
 	background: linear-gradient(
 			0deg,
 			rgba(55, 55, 55, 0.5),
